[gd_scene load_steps=5 format=3 uid="uid://detp30ngyni5s"]

[ext_resource type="Script" uid="uid://c2ns81er81cc4" path="res://scenes/title_screen.gd" id="1_mgrm8"]
[ext_resource type="PackedScene" uid="uid://btbw57a4jnd2t" path="res://scenes/eyelid.tscn" id="2_mgrm8"]
[ext_resource type="Texture2D" uid="uid://ujqaveds3d7n" path="res://2d_assets/title_card.png" id="2_s4lrb"]
[ext_resource type="AudioStream" uid="uid://byhy1d2ua4bqh" path="res://musics/main menu.mp3" id="4_mgrm8"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mgrm8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_s4lrb")

[node name="PlayButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 447.0
offset_top = 271.0
offset_right = 710.0
offset_bottom = 378.0
flat = true

[node name="CreditsButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 444.0
offset_top = 381.0
offset_right = 715.0
offset_bottom = 467.0
flat = true

[node name="ExitButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 443.0
offset_top = 469.0
offset_right = 714.0
offset_bottom = 541.0
flat = true

[node name="Eyelid" parent="." instance=ExtResource("2_mgrm8")]
layout_mode = 0
offset_left = 309.0
offset_top = 48.0
offset_right = 309.0
offset_bottom = 48.0
scale = Vector2(0.361, 0.361)

[node name="Eyelid2" parent="." instance=ExtResource("2_mgrm8")]
layout_mode = 0
offset_left = 509.0
offset_top = 48.0
offset_right = 509.0
offset_bottom = 48.0
scale = Vector2(0.361, 0.361)

[node name="ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_mgrm8")
autoplay = true
